@@ -57,6 +57,7 @@
 <a href="CoreTasks/javac.html">Javac</a><br>
 <a href="CoreTasks/javadoc.html">Javadoc/<i>Javadoc2</i></a><br>
 <a href="CoreTasks/mail.html">Mail</a><br>
+<a href="CoreTasks/manifest.html">Manifest</a><br>
 <a href="CoreTasks/mkdir.html">Mkdir</a><br>
 <a href="CoreTasks/move.html">Move</a><br>
 <a href="CoreTasks/parallel.html">Parallel</a><br>
