@@ -58,6 +58,7 @@ bunzip2=org.apache.tools.ant.taskdefs.BUnzip2
 checksum=org.apache.tools.ant.taskdefs.Checksum
 waitfor=org.apache.tools.ant.taskdefs.WaitFor
 input=org.apache.tools.ant.taskdefs.Input
+manifest=org.apache.tools.ant.taskdefs.Manifest
 
 # optional tasks
 script=org.apache.tools.ant.taskdefs.optional.Script
